# SoftAdapt-Keras

./: __init__.py  hatch.toml  pyproject.toml  requirements-dev.txt  ruff.toml  ruff_defaults.toml  tox.ini
.github/workflows/: hatch-build.yml  hatch-test.yml  publish-to-pypi.yml  push-validation.yml  test.yml
callbacks/: __init__.py  adaptive_loss.py
docs/: about.md  algorithms.md  keras.md
scripts/: generate_coverage_summary.py  utils.py  write_coverage_summary_report.py
softadapt/: __init__.py
softadapt/algorithms/: __init__.py  loss_weighted_variant.py  normalized_slopes_variant.py  original_variant.py
softadapt/base/: _softadapt_base_class.py
softadapt/callbacks/: adaptive_loss.py
softadapt/utilities/: _finite_difference.py
softadapt_keras/: __init__.py
softadapt_keras/algorithms/: __init__.py  loss_weighted_variant.py  normalized_slopes_variant.py  original_variant.py
softadapt_keras/base/: _softadapt_base_class.py
softadapt_keras/constants/: _finite_difference_constants.py
softadapt_keras/utilities/: _finite_difference.py
src/softadapt/: __init__.py
src/softadapt/algorithms/: __init__.py  loss_weighted_variant.py  normalized_slopes_variant.py  original_variant.py
src/softadapt/base/: _softadapt_base_class.py
src/softadapt/callbacks/: __init__.py  adaptive_loss.py
src/softadapt/constants/: __init__.py  _finite_difference_constants.py  _stability_constants.py
src/softadapt/utilities/: _finite_difference.py
tests/: test_adaptive_callback.py  test_finite_difference.py  test_softadapt_original_variant.py
