[project]
name = "softadapt"
version = "0.2.0"
description = "SoftAdapt: Techniques for Adaptive Loss Weighting of Neural Networks with Multi-Part Loss Functions implemented in Keras"
authors = [
    {name = "Jacob Logas",email = "jacob@logas.me"},
    { name="A. Ali Heydari", email="aliheydari@ucdavis.edu"}
]
maintainers = [
    {name = "Jacob Logas",email = "jacob@logas.me"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords=["Physics-Informed Neural Networks", "Balancing PINNs Loss",
                "Adaptive-Weighting, Multi-Task-Nerual-Networks Optimization",
                "Gradient-Descent-Weighting, Machine Learning"]
dependencies = [
    "findiff (>=0.12.1,<0.13.0)",
    "keras (>=3.9.2,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]

[project.urls]
homepage = "https://github.com/logasja/SoftAdapt-Keras"
repository = "https://github.com/logasja/SoftAdapt-Keras"
"Bug Tracker" = "https://github.com/logasja/SoftAdapt-Keras/issues"

[tool.poetry]
package-mode = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
torch = "^2.7.0"
pre-commit = "^4.2.0"
coverage = "^7.8.0"
pytest = "^8.3.5"
pytest-randomly = "^3.16.0"
tox = "^4.25.0"
mypy = "^1.15.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
